Unnecessary to version plugin shared libraries

--- a/src/unix/plugins/xenstore/Makefile.am
+++ b/src/unix/plugins/xenstore/Makefile.am
@@ -7,5 +7,5 @@ pkglib_LTLIBRARIES=xenstore.la
 
 xenstore_la_SOURCES=xenstore.c
 xenstore_la_LIBADD = -lxenstore
-xenstore_la_LDFLAGS = -module
+xenstore_la_LDFLAGS = -module -avoid-version
 
