Ignore generated files

--- a/.bzrignore
+++ b/.bzrignore
@@ -9,3 +9,20 @@ agent-unit-tests-results.xml
 diffiehellman-unit-tests-results.xml
 builds
 WindowsConfigurationAgent.5.1.ReSharper.user
+.libs
+.deps
+*.la
+*.lo
+aclocal.m4
+compile
+configure
+config.guess
+config.log
+config.status
+config.sub
+depcomp
+install-sh
+libtool
+ltmain.sh
+missing
+m4
