--- a/src/unix/src/Makefile.am
+++ b/src/unix/src/Makefile.am
@@ -1,7 +1,9 @@
 
 pluginsdir=$(datadir)/nova-agent/plugins
 
-AM_CFLAGS =-I../include -I/usr/include/python2.6 -DAGENT_VERSION=\"@PACKAGE_VERSION@\" -DPLUGINS_DIR=\"${pluginsdir}\" -Wall -Werror $(GCOV_CFLAGS) -fvisibility=hidden
+#AM_CFLAGS =-I../include @PYTHON_CFLAGS@ -DAGENT_VERSION=\"@PACKAGE_VERSION@\" -DPLUGINS_DIR=\"${pluginsdir}\" -Wall -Werror $(GCOV_CFLAGS) -fvisibility=hidden
+AM_CFLAGS =-I../include @PYTHON_CFLAGS@ -Wall -Werror $(GCOV_CFLAGS)
+AM_CFLAGS +=-DAGENT_VERSION=\"@PACKAGE_VERSION@\" -DPLUGINS_DIR=\"${pluginsdir}\" -fvisibility=hidden
 
 sbin_PROGRAMS = nova-agent
 
@@ -9,7 +11,7 @@ check_PROGRAMS =
 
 nova_agent_SOURCES = nova-agent.c python.c plugin.c logging.c
 
-nova_agent_LDADD = @XENSTORE_LIB@ -lpthread
+nova_agent_LDADD = @PYTHON_LIB@ -lpthread
 nova_agent_LDFLAGS = -export-dynamic
 #-static
 
