--- a/src/unix/plugins/xenstore/Makefile.am
+++ b/src/unix/plugins/xenstore/Makefile.am
@@ -1,7 +1,5 @@
 
-pluginsdir=$(datadir)/nova-agent/plugins
-
-AM_CFLAGS =-I../../include -I/usr/include/python2.6 -DAGENT_VERSION=\"@PACKAGE_VERSION@\" -DPLUGINS_DIR=\"${pluginsdir}\" -Wall -Werror $(GCOV_CFLAGS)
+include $(top_srcdir)/Common.am
 
 pkglib_LTLIBRARIES=xenstore.la
 
