make install works now, but needs to work better when dirs exist

--- a/src/unix/Makefile.am
+++ b/src/unix/Makefile.am
@@ -4,12 +4,20 @@ include $(top_srcdir)/Common.am
 ACLOCAL_MFLAGS = -I m4
 
 SUBDIRS = src plugins
+
+noinst_HEADERS = include/logging.h include/nova-agent.h \
+				 include/plugin_int.h include/python.h
+include_HEADERS = include/plugin.h
+
+EXTRA_DIST = install_libs.sh install_modules.py nova-agent.py
+
+data_DATA = nova-agent.py
+
 BINTARNAME = @PACKAGE@-`uname -m`-@PACKAGE_VERSION@.tar.gz
-EXTRA_DIST = 
 
 install-exec-local:
-	src/nova-agent -- install_modules.py $(modulesdir)
-	sh install_libs.sh $(libdir)
+	src/nova-agent -- install_modules.py ${DESTDIR}/$(modulesdir)
+	sh install_libs.sh ${DESTDIR}/$(libdir)
 
 clean-local::
 	find . -name '*.gcov' -delete -o -name '*.gcda' -delete -o -name '*.gcno' -delete
@@ -21,7 +29,7 @@ coverage:: check
 bintar: all
 	@rm -rf fakeroot; mkdir -p fakeroot
 	@$(MAKE) install DESTDIR=$(CURDIR)/fakeroot
-	@find fakeroot -type f | sed -e 's@^fakeroot@@g' > filelist ; mv filelist fakeroot/usr/share/agent-smith
+	@find fakeroot -type f | sed -e 's@^fakeroot@@g' > filelist ; mv filelist $(datadir)
 	@tar -czC fakeroot -f $(BINTARNAME) .
 	@echo ""
 	@echo "Created $(BINTARNAME)"
