--- a/src/unix/Common.am
+++ b/src/unix/Common.am
@@ -2,7 +2,7 @@
 datadir=${prefix}/share/${PACKAGE}
 pluginsdir=${datadir}/plugins
 pkglibdir=${pluginsdir}
-modulesdir=${datadir}/modules
 libdir=${datadir}/lib
+modulesdir=${libdir}/@PYTHON_VER@
 
 AM_CFLAGS =-I$(top_srcdir)/include ${PYTHON_CFLAGS}  -Wall -Werror ${GCOV_CFLAGS}
