link xenstore.so to .libs/xenstore.so so we can import the xenstore plugin right from the src dir

--- a/src/unix/plugins/Makefile.am
+++ b/src/unix/plugins/Makefile.am
@@ -22,3 +22,12 @@ nobase_pkglib_LTLIBRARIES=xenstore/xenstore.la
 xenstore_xenstore_la_SOURCES=xenstore/xenstore.c
 xenstore_xenstore_la_LIBADD = -lxenstore
 xenstore_xenstore_la_LDFLAGS = -module -avoid-version
+
+nodist_noinst_DATA = xenstore/xenstore.so
+
+xenstore/xenstore.so:
+	ln -s .libs/xenstore.so xenstore/xenstore.so
+
+clean-local:
+	rm -f xenstore/xenstore.so
+
