find xenstore.so dependencies

--- a/src/unix/plugins/Makefile.am
+++ b/src/unix/plugins/Makefile.am
@@ -31,3 +31,6 @@ xenstore/xenstore.so:
 clean-local:
 	rm -f xenstore/xenstore.so
 
+install-exec-local:
+	@$(top_srcdir)/src/nova-agent -qS -- $(top_srcdir)/install_libs.py xenstore/xenstore.so ${DESTDIR}/$(libdir)
+
