--- a/src/unix/Makefile.am
+++ b/src/unix/Makefile.am
@@ -16,8 +16,9 @@ data_DATA = nova-agent.py
 BINTARNAME = @PACKAGE@-`uname -m`-@PACKAGE_VERSION@.tar.gz
 
 install-exec-local:
-	@src/nova-agent -qS -- install_libs.py src/nova-agent ${DESTDIR}/$(libdir)
+	@src/nova-agent -qS -- install_libs.py src/nova-agent ${DESTDIR} $(libdir)
 	@src/nova-agent -qS -- install_modules.py ${DESTDIR}/$(modulesdir)
+	@./patch_binary.py ${DESTDIR}${sbindir}/nova-agent ${DESTDIR} $(libdir)
 
 clean-local::
 	find . -name '*.gcov' -delete -o -name '*.gcda' -delete -o -name '*.gcno' -delete
