Start major refactoring of how plugins work Move some code into an agentlib module, so that plugins can be loaded without the nova-agent binary

--- a/src/unix/Common.am
+++ b/src/unix/Common.am
@@ -5,4 +5,4 @@ pkglibdir=${pluginsdir}
 libdir=${datadir}/lib
 modulesdir=${libdir}/@PYTHON_VER@
 
-AM_CFLAGS =-I$(top_srcdir)/include ${PYTHON_CFLAGS}  -Wall -Werror ${GCOV_CFLAGS}
+AM_CFLAGS =-I$(top_srcdir)/include -I$(top_srcdir)/lib ${PYTHON_CFLAGS}  -Wall -Werror ${GCOV_CFLAGS}
