--- a/src/unix/configure.ac
+++ b/src/unix/configure.ac
@@ -104,6 +104,7 @@ AC_SUBST([DESTDIR])
 
 AC_CONFIG_FILES([Makefile
                  src/Makefile
+                 lib/Makefile
                  plugins/Makefile
                  ])
 
