move logging back to main binary and ditch src/Makefile.am

--- a/src/unix/Makefile.am
+++ b/src/unix/Makefile.am
@@ -3,13 +3,43 @@ include $(top_srcdir)/Common.am
 
 ACLOCAL_MFLAGS = -I m4
 
-SUBDIRS = lib src plugins
+AM_CFLAGS += -DAGENT_VERSION=\"@PACKAGE_VERSION@\" -DPLUGINS_DIR=\"${pluginsdir}\" -DDATA_DIR=\"${datadir}\" -fvisibility=hidden
 
-noinst_HEADERS = include/logging.h include/nova-agent.h \
-				 include/plugin_int.h include/python.h
-include_HEADERS = include/plugin.h
+SUBDIRS = lib plugins
 
 EXTRA_DIST = install_libs.py install_modules.py nova-agent.py
+
+#
+# agentlib library
+#
+
+noinst_HEADERS = lib/agentlib_int.h lib/plugin_int.h
+include_HEADERS = lib/agentlib.h lib/plugin.h
+
+nobase_lib_LTLIBRARIES = lib/libagentlib.la
+
+lib_libagentlib_la_SOURCES = lib/agentlib.c lib/plugin.c
+
+#
+# nova-agent binary
+#
+
+noinst_HEADERS += include/logging_int.h include/nova-agent_int.h \
+                 include/python_int.h
+include_HEADERS += include/logging.h include/nova-agent.h
+
+sbin_PROGRAMS = src/nova-agent
+
+src_nova_agent_SOURCES = src/nova-agent.c src/python.c src/logging.c
+
+src_nova_agent_LDADD = @PYTHON_LIB@ lib/libagentlib.la -lpthread
+src_nova_agent_LDFLAGS = -export-dynamic
+
+
+nodist_noinst_DATA = lib/agentlib.so
+
+lib/agentlib.so:
+	    ln -s .libs/libagentlib.so lib/agentlib.so
 
 data_DATA = nova-agent.py
 
@@ -30,6 +60,7 @@ distclean-local:
 	rm -rf $(top_srcdir)/autom4te.cache
 
 clean-local::
+	rm -f lib/agentlib.so
 	find . -name '*.gcov' -delete -o -name '*.gcda' -delete -o -name '*.gcno' -delete
 	find . -name '*.pyc' -exec rm -f {} \;
 	rm -rf $(CURDIR)/fakeroot
