moved logging back to the agentlib library separated src/lib Makefile.am's again make sure xenstore.so links libagentlib.so fix realloc bug in agent_plugin_register fix jsonparser typo and comment out CommandNotFound exception for now etc

--- a/src/unix/Makefile.am
+++ b/src/unix/Makefile.am
@@ -5,50 +5,20 @@ ACLOCAL_MFLAGS = -I m4
 
 AM_CFLAGS += -DAGENT_VERSION=\"@PACKAGE_VERSION@\" -DPLUGINS_DIR=\"${pluginsdir}\" -DDATA_DIR=\"${datadir}\" -fvisibility=hidden
 
-SUBDIRS = lib plugins
+SUBDIRS = lib src plugins
 
 EXTRA_DIST = install_libs.py install_modules.py nova-agent.py
-
-#
-# agentlib library
-#
-
-noinst_HEADERS = lib/agentlib_int.h lib/plugin_int.h
-include_HEADERS = lib/agentlib.h lib/plugin.h
-
-nobase_lib_LTLIBRARIES = lib/libagentlib.la
-
-lib_libagentlib_la_SOURCES = lib/agentlib.c lib/plugin.c
-
-#
-# nova-agent binary
-#
-
-noinst_HEADERS += include/logging_int.h include/nova-agent_int.h \
-                 include/python_int.h
-include_HEADERS += include/logging.h include/nova-agent.h
-
-sbin_PROGRAMS = src/nova-agent
-
-src_nova_agent_SOURCES = src/nova-agent.c src/python.c src/logging.c
-
-src_nova_agent_LDADD = @PYTHON_LIB@ lib/libagentlib.la -lpthread
-src_nova_agent_LDFLAGS = -export-dynamic
-
-
-nodist_noinst_DATA = lib/agentlib.so
-
-lib/agentlib.so:
-	    ln -s .libs/libagentlib.so lib/agentlib.so
 
 data_DATA = nova-agent.py
 
 BINTARNAME = @PACKAGE@-`uname -m`-@PACKAGE_VERSION@.tar.gz
 
 install-exec-local:
-	@$(top_srcdir)/src/nova-agent -qS -l error -- $(top_srcdir)/install_libs.py $(top_srcdir)/src/nova-agent ${DESTDIR} $(libdir)
-	@$(top_srcdir)/src/nova-agent -qS -l error -- $(top_srcdir)/install_modules.py ${DESTDIR}/$(modulesdir)
-	@./patch_binary.py ${DESTDIR}${sbindir}/nova-agent ${DESTDIR} $(libdir)
+	@src/.libs/nova-agent -St -l debug $(top_srcdir)/install_libs.py $(sbindir)/nova-agent ${DESTDIR} $(libdir)
+	@src/.libs/nova-agent -St -l debug $(top_srcdir)/install_modules.py ${DESTDIR}/$(modulesdir)
+#	@$(PYTHON_VER) $(top_srcdir)/install_libs.py $(sbindir)/nova-agent ${DESTDIR} $(libdir)
+#	@$(PYTHON_VER) $(top_srcdir)/install_modules.py ${DESTDIR}/$(modulesdir)
+#	@$(PYTHON_VER) $(top_srcdir)/patch_binary.py ${DESTDIR}${sbindir}/nova-agent ${DESTDIR} $(libdir)
 
 distclean-local:
 	rm -f $(top_srcdir)/{configure,configure.in}
