--- a/src/unix/src/Makefile.am
+++ b/src/unix/src/Makefile.am
@@ -3,13 +3,18 @@ include $(top_srcdir)/Common.am
 
 AM_CFLAGS += -DAGENT_VERSION=\"@PACKAGE_VERSION@\" -DPLUGINS_DIR=\"${pluginsdir}\" -DDATA_DIR=\"${datadir}\" -fvisibility=hidden
 
+noinst_HEADERS = ../include/nova-agent_int.h ../include/python_int.h
+include_HEADERS = ../include/nova-agent.h
+
 sbin_PROGRAMS = nova-agent
 
 check_PROGRAMS =
 
-nova_agent_SOURCES = nova-agent.c python.c logging.c
+nova_agent_SOURCES = nova-agent.c python.c
 
-nova_agent_LDADD = @PYTHON_LIB@ $(top_srcdir)/lib/agentlib.so -lpthread
+nova_agent_LDADD = @PYTHON_LIB@ $(top_srcdir)/lib/libagentlib.la -lpthread
 nova_agent_LDFLAGS = -export-dynamic
 #-static
 
+$(top_srcdir)/lib/libagentlib.la:
+	cd $(top_srcdir)/lib && make
