--- a/src/unix/plugins/Makefile.am
+++ b/src/unix/plugins/Makefile.am
@@ -6,7 +6,7 @@ dist_plugins_SCRIPTS = __init__.py jsonparser.py
 nobase_pkglib_LTLIBRARIES = xenstore.la
 
 xenstore_la_SOURCES = xenstore.c
-xenstore_la_LIBADD = $(top_srcdir)/lib/libagentlib.la -lxenstore
+xenstore_la_LIBADD = $(top_srcdir)/lib/libagent.la -lxenstore
 xenstore_la_LDFLAGS = -module -avoid-version
 
 nodist_noinst_DATA = xenstore.so
@@ -14,7 +14,7 @@ nodist_noinst_DATA = xenstore.so
 xenstore.so:
 	ln -s .libs/xenstore.so xenstore.so
 
-$(top_srcdir)/lib/libagentlib.la:
+$(top_srcdir)/lib/libagent.la:
 	cd $(top_srcdir)/lib && make
 
 clean-local:
