forgot to update tests Makefile.am for make dist

--- a/src/unix/tests/Makefile.am
+++ b/src/unix/tests/Makefile.am
@@ -1,5 +1,8 @@
 
 include $(top_srcdir)/Common.am
 
-dist_noinst_SCRIPTS = __init__.py agent_test.py test_misc_commands.py
+dist_noinst_SCRIPTS = __init__.py agent_test.py test_misc_commands.py \
+					  test_jsonparser.py test_unknown_command.py \
+					  test_injectfile.py test_password_commands.py
+
 
