--- a/src/unix/Makefile.am
+++ b/src/unix/Makefile.am
@@ -48,10 +48,9 @@ coverage:: check
 bintar: all
 	@rm -rf fakeroot; mkdir -p fakeroot
 	@$(MAKE) install DESTDIR=$(CURDIR)/fakeroot
-	@find fakeroot -type f | sed -e 's@^fakeroot@@g' > filelist ; mv filelist $(datadir)
-	@cp -p $(top_srcdir)/scripts/agent-smith ${DESTDIR}/$(sbindir)/.
-	@mkdir ${DESTDIR}/${datadir}/etc
-	@cp -p $(top_srcdir)/scripts/agent-smith* ${DESTDIR}/${datadir}/etc/.
+	@cp -p $(top_srcdir)/scripts/agent-smith ${CURDIR}/fakeroot/$(sbindir)/.
+	@mkdir ${CURDIR}/fakeroot/${datadir}/etc
+	@cp -p $(top_srcdir)/scripts/nova-agent* ${CURDIR}/fakeroot/${datadir}/etc/.
 	@tar -czC fakeroot -f $(BINTARNAME) .
 	@echo ""
 	@echo "Created $(BINTARNAME)"
