--- a/src/unix/Makefile.am
+++ b/src/unix/Makefile.am
@@ -23,9 +23,10 @@ check-local:
 	@${PYTHON_VER} run_tests.py
 
 install-exec-local:
-	@$(PYTHON_VER) $(top_srcdir)/install_libs.py ${DESTDIR}/$(sbindir)/nova-agent ${DESTDIR} $(libdir)
-	@$(PYTHON_VER) $(top_srcdir)/install_modules.py ${DESTDIR}/$(modulesdir)
+	@$(PYTHON_VER) $(top_srcdir)/install_libs.py ${DESTDIR}$(sbindir)/nova-agent ${DESTDIR}/$(libdir)
+	@$(PYTHON_VER) $(top_srcdir)/install_modules.py ${DESTDIR}$(modulesdir)
 	@$(PYTHON_VER) $(top_srcdir)/patch_binary.py ${DESTDIR}${sbindir}/nova-agent ${DESTDIR} $(libdir)
+	@$(PYTHON_VER) $(top_srcdir)/patch_libs.py ${DESTDIR}${datadir} $(libdir)
 
 distclean-local:
 	rm -f $(top_srcdir)/{configure,configure.in}
