--- a/src/unix/plugins/Makefile.am
+++ b/src/unix/plugins/Makefile.am
@@ -1,4 +1,11 @@
 
 include $(top_srcdir)/Common.am
 
-dist_plugins_SCRIPTS = __init__.py jsonparser.py xscomm.py
+my_files = __init__.py jsonparser.py xscomm.py
+
+dist_noinst_SCRIPTS = ${my_files}
+
+dist_plugins_SCRIPTS = ${my_files:.py=.pyc}
+
+${my_files:.py=.pyc}:
+	${PYTHON_VER} -m py_compile ${@:.pyc=.py}
